[project]
name = "telegram-notion-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents==0.4.1",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.2.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "mcp[cli]>=1.26.0",
    "notion-client>=3.0.0",
    "pillow>=12.1.1",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "grok>=6.2",
    "sarvamai>=0.1.27",
]
